<?xml version="1.0"?>
<package format="2">
  <name>rr_custom_msgs</name>
  <version>0.0.0</version>
  <description>The rr_custom_msgs package</description>
  <maintainer email="rebecca@todo.todo">rebecca</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
